[package]
name = "pose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.28", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.86"
serde = "1.0.145"
